--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,11 @@
-/* custom styles */
+#page-wrapper {
+	text-align: center;
+}
+img {
+	max-height: 300px;
+	height: 300px;
+}
+p {
+	text-align: center;
+	font-size: 16px;
+}
